<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="129dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/daniel"
                    app:civ_border_color="#000"
                    app:civ_border_width="0.5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/name"
                    style="@style/HeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/username"
                    app:layout_constraintEnd_toEndOf="@+id/name"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <!-- <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/switch_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/dark_mode"
                     app:layout_constraintStart_toEndOf="@+id/dark_mode"
                     app:layout_constraintTop_toTopOf="@+id/dark_mode" />-->

                <ImageView
                    android:id="@+id/dark_mode"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:srcCompat="@drawable/ic_baseline_brightness_medium_24" />

                <ImageView
                    android:id="@+id/gmail_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/divider"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider"
                    app:srcCompat="@drawable/gmail" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/end_color"
                    app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/gmail_icon"
                    app:layout_constraintTop_toTopOf="@+id/divider1" />

                <ImageView
                    android:id="@+id/twitter_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:layout_constraintBottom_toBottomOf="@+id/divider1"
                    app:layout_constraintEnd_toStartOf="@+id/divider1"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider"
                    app:layout_constraintTop_toTopOf="@+id/divider1"
                    app:srcCompat="@drawable/twitter" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/end_color"
                    app:layout_constraintEnd_toStartOf="@+id/github_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/twitter_icon"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <ImageView
                    android:id="@+id/github_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:layout_constraintBottom_toBottomOf="@+id/divider1"
                    app:layout_constraintEnd_toStartOf="@+id/divider2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider1"
                    app:layout_constraintTop_toTopOf="@+id/divider1"
                    app:srcCompat="@drawable/github" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/end_color"
                    app:layout_constraintEnd_toStartOf="@+id/linkedin_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/github_icon"
                    app:layout_constraintTop_toTopOf="@+id/divider1" />

                <ImageView
                    android:id="@+id/linkedin_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/divider2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toTopOf="@+id/divider2"
                    app:srcCompat="@drawable/linkedin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/about_me"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_me"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/about_me_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineHeight="20sp"
            android:text="@string/about_me_text"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/about_me"
            app:layout_constraintStart_toStartOf="@+id/about_me"
            app:layout_constraintTop_toBottomOf="@+id/about_me" />

        <TextView
            android:id="@+id/my_skills"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/skills"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/about_me_text"
            app:layout_constraintTop_toBottomOf="@+id/about_me_text" />

        <TextView
            android:id="@+id/skills_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineHeight="20sp"
            android:text="@string/skills_text"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/my_skills"
            app:layout_constraintStart_toStartOf="@+id/my_skills"
            app:layout_constraintTop_toBottomOf="@+id/my_skills" />

        <TextView
            android:id="@+id/what_i_offer"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/offer"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/skills_text"
            app:layout_constraintTop_toBottomOf="@+id/skills_text" />

        <TextView
            android:id="@+id/what_i_offer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineHeight="20sp"
            android:text="@string/offer_text"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/what_i_offer"
            app:layout_constraintStart_toStartOf="@+id/what_i_offer"
            app:layout_constraintTop_toBottomOf="@+id/what_i_offer" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



